fix: Icons contrast

--- a/stylesheets/components/_icon.less
+++ b/stylesheets/components/_icon.less
@@ -5,8 +5,9 @@
   filter: invert(1);
 }
 
-.visitorLogIconWithDetails {
-  img[src*="plugins/Morpheus/icons/dist/devices"] {
-    filter: invert(1);
-  }
+
+img[src*="plugins/Morpheus/icons/dist/devices"],
+img[src*="plugins/Morpheus/icons/dist/os/IOS.png"],
+img[src*="plugins/Morpheus/icons/dist/brand/Apple.png"] {
+  filter: invert(1) !important;
 }
